--- a/package.json
+++ b/package.json
@@ -21,19 +21,43 @@
     "webgme": "^1.4.1"
   },
   "devDependencies": {
+    "6to5-jest": "^3.0.0",
     "babel-core": "^6.1.21",
+    "babel-jest": "^6.0.1",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.22.0",
     "ejs-loader": "^0.2.1",
+    "exports-loader": "^0.6.2",
     "file-loader": "^0.8.4",
     "html-loader": "^0.3.0",
+    "imports-loader": "^0.6.5",
+    "jest-cli": "*",
+    "jest-webpack-alias": "^2.2.0",
+    "less": "^2.6.0",
+    "less-loader": "^2.2.2",
+    "react-addons-test-utils": "^0.14.0",
+    "react-tools": "^0.13.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.12"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/jest/preprocessor",
+    "testFileExtensions": [
+      "es6",
+      "js",
+      "jsx"
+    ],
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs"
+    ]
   }
 }
