--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "main": "/src/server/index.js",
   "dependencies": {
     "backbone": "^1.2.3",
+    "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "bootstrap-webpack": "0.0.5",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "jade": "^1.11.0",
     "jquery": "^2.2.0",
@@ -19,7 +21,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "underscore": "^1.8.3",
-    "webgme": "^1.4.1"
+    "webgme": "^1.6.0"
   },
   "devDependencies": {
     "6to5-jest": "^3.0.0",
@@ -28,6 +30,7 @@
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "codemirror": "^5.12.0",
     "css-loader": "^0.22.0",
     "ejs-loader": "^0.2.1",
     "exports-loader": "^0.6.2",
@@ -38,7 +41,9 @@
     "jest-webpack-alias": "^2.2.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
+    "lodash": "^4.6.1",
     "react-addons-test-utils": "^0.14.0",
+    "react-codemirror": "^0.2.5",
     "react-tools": "^0.13.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
