--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "underscore": "^1.8.3",
-    "webgme": "^1.6.0"
+    "webgme": "1.6.0"
   },
   "devDependencies": {
     "6to5-jest": "^3.0.0",
